static/css/master.css
@import url('https://fonts.googleapis.com/css?family=Roboto:400,700|Slabo+27px');

body {
    margin-top: 50px;
    overflow-y: scroll;
    font-family: 'Roboto';
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Slabo 27px';
}

#menu {
    margin-bottom: 0;
    padding-bottom: 0;
}

#splash {
    width: 100%;
    box-sizing: border-box;
}

#content {
    /*max-width: 720px;*/
    margin-top: 1em;
}

form { margin: 1.5em auto; }
label { display: block; }

label.name { 
    font-weight: normal;
    font-size: 20px; 
    margin-bottom: 0px;
    margin-top: 20px;
}

label.description {
    font-weight: normal;
    margin-bottom: 0px;
}

input {
    margin-top: 8px;
}

.right { float: right; }

#submit { width: 90px; }
#cancel { margin-right: 1em; width: 90px; }

.lower { margin-top: 1em; }
.lowerer { margin-top: 0.5em; }
.lowererer { margin-top: 3em; }

h1.title {
    font-size: 10em;
    text-align: center;
    padding: .2em;
}

span.title-left {
    background-color: red;
    color: lightgray;
    padding: 0 .2em;
    border-radius: .2em 0 0 .2em;
}

span.title-right {
    background-color: lightgray;
    color: red;
    padding: 0 .2em;
    border-radius: 0 .2em .2em 0;
}

p.main-text {
    text-align: center;
    font-size: 2em;
}

.tagline { 
    text-align: center; 
    font-size: 24px; 
    margin-top: 0; 
}

/*.center {*/
    /*max-width: 720px;*/
    /*text-align: center;*/
    /*margin: 2em auto;*/
/*}*/

.asteriskField {
    display: none;
}

ol.top > li {
    margin-top: 0.3em;
}

/* .red { color: red; } */

table.schedule {
    font-size: 14px;
}

table.schedule td {
    padding-top: 1px;
    padding-bottom: 1px;
}

table.schedule td:first-of-type {
    padding-left: 10px;
    padding-right: 10px;
    border-right: 1px solid black;
    text-align: right;
}

table.schedule td:last-of-type {
    padding-left: 10px;
}


table#teams {
    margin-top: 1em;
}

table#teams ul {
    margin-bottom: 0;
    padding-left: 0px;
    list-style-type: none;
}

div.about-person img {
    border-radius: 50%;
    width: 100%;
}

footer {
    margin-top: 2em;
    padding: 1em;
    background-color: #f5f5f5;
    text-align: center;
}

.btn-register {
    width: 100%;
}

